--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -1,34 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://calculatorhistory.net"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sealed interface Entry { \n",
-    "    enum BinOp implements Entry { ADD, MULT }\n",
-    "    record Value(int number) implements Entry { } \n",
-    "}\n",
-    "\n",
-    "record Pair<A,B>(A first, B second) { }\n",
-    "\n",
-    "interface ICalculator {\n",
-    "    boolean appendEntry(Entry e); // input either BinOp or Vaule\n",
-    "        // appends legal entry input and return true (returns false for illegal input)\n",
-    "        // updates last calculated value if possible\n",
-    "    boolean removeEntry(); // push the x button\n",
-    "        // removes the last input entry and return true (returns false if it is not possible)\n",
-    "        // updates last calculated value if necessary\n",
-    "    Entry.Value calculate();    // push the = button\n",
-    "        // calculate current entry and returns the result value (return null when it fails) \n",
-    "        // add to history\n",
-    "        // clear current entries and nullify last calculated value\n",
-    "    Entry.Value lastValue(); // last calculated value\n",
-    "    List<Entry> entries();  // current entries\n",
-    "    List< Pair<List<Entry>, Entry.Value> > history();  // history of calculations\n",
-    "    void clearEntries(); // clear the current entries, also clearing last calculate value\n",
-    "    void clearHistory(); // clear history\n",
+    "sealed interface Entry { // entries for arithmetic expressions\n",
+    "    enum BinOp implements Entry { ADD, MULT } // +, *\n",
+    "    enum Delim implements Entry { LPAREN, RPAREN } // (, )\n",
+    "    record Value(int number) implements Entry { } // integer value\n",
     "}"
    ]
   },
@@ -36,9 +24,209 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ADD"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Entry.BinOp.ADD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LPAREN"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Entry.Delim.LPAREN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value[number=43]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new Entry.Value(43)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "// ... Calculator implements ICalculator ..."
+    "record Pair<A,B>(A first, B second) { } // because Java standard library does not provide pair data type\n",
+    "\n",
+    "interface ICalculator {\n",
+    "    boolean appendEntry(Entry e); // adds an entriy (either BinOp, Delim, or Vaule) at the end\n",
+    "        // appends legal entry input and return true (returns false for illegal input without adding it)\n",
+    "    boolean removeEntry(); // removes the last added entry; ◄(x or DEL) button\n",
+    "        // removes the last input entry and returns true (returns false if not possible)\n",
+    "    Entry.Value currValue(); // currently calculated value from the current entries (defaults to null)\n",
+    "    Entry.Value lastValue(); // last calculated value (defaults to 0)\n",
+    "    List<Entry> entries();  // get current entries\n",
+    "    List< Pair<List<Entry>, Entry.Value> > history();  // history of calculations\n",
+    "    void clearEntries(); // clear the current entries; AC button\n",
+    "    void clearHistory(); // clear history\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// ... class Calculator implements ICalculator ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "참고자료: https://madplay.github.io/post/call-javascript-function-from-java-using-graalvm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%loadFromPOM\n",
+    "<dependency>\n",
+    "    <groupId>org.graalvm.js</groupId>\n",
+    "    <artifactId>js</artifactId>\n",
+    "    <version>19.2.0.1</version>\n",
+    "</dependency>  \n",
+    "<dependency>\n",
+    "    <groupId>org.graalvm.js</groupId>\n",
+    "    <artifactId>js-scriptengine</artifactId>\n",
+    "    <version>19.2.0.1</version>\n",
+    "</dependency>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n",
+      "true\n",
+      "class org.graalvm.polyglot.Value\n"
+     ]
+    }
+   ],
+   "source": [
+    "import org.graalvm.polyglot.*;\n",
+    "\n",
+    "try (Context context = Context.create(\"js\")) {\n",
+    "\n",
+    "    var value = context.eval(\"js\", \"3 + 4 * 10\");\n",
+    "    System.out.println( value );\n",
+    "    System.out.println( value.toString().equals(\"43\") );\n",
+    "    System.out.println( value.getClass() ); // 7\n",
+    "\n",
+    "} catch (Exception e) {\n",
+    "    System.err.println(e);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n",
+      "true\n",
+      "class org.graalvm.polyglot.Value\n"
+     ]
+    }
+   ],
+   "source": [
+    "Context context = Context.create(\"js\"); // 그냥 항상 성공한다고 가정하면 이렇게 써도 ...\n",
+    "\n",
+    "var value = context.eval(\"js\", \"3 + 4 * 10\");\n",
+    "System.out.println( value );\n",
+    "System.out.println( value.toString().equals(\"43\") );\n",
+    "System.out.println( value.getClass() );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "org.graalvm.polyglot.PolyglotException: SyntaxError: Unnamed:1:8 Expected an operand but found eof\n",
+      "3 + 4 * \n",
+      "        ^\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이걸 적당히 잘 처리하면 유용하게 활용 가능\n"
+     ]
+    }
+   ],
+   "source": [
+    "Context context = Context.create(\"js\");\n",
+    "\n",
+    "try {\n",
+    "    Value value = context.eval(\"js\", \"3 + 4 * \"); // 사실 여기서 문제가 발생할 수도\n",
+    "    System.out.println( value );\n",
+    "    System.out.println( value.toString().equals(\"43\") );\n",
+    "    System.out.println( value.getClass() );\n",
+    "} catch (Exception e) {\n",
+    "    System.err.println(e);\n",
+    "    System.out.println(\"이걸 적당히 잘 처리하면 유용하게 활용 가능\");\n",
+    "}"
    ]
   },
   {
