--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# HW2a: Java Calcuator\n",
+    "- 이름: ???\n",
+    "- 학번: ????????"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://calculatorhistory.net"
    ]
   },
@@ -103,15 +112,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// ... class Calculator implements ICalculator ..."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,26 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%loadFromPOM\n",
-    "<dependency>\n",
-    "    <groupId>org.graalvm.js</groupId>\n",
-    "    <artifactId>js</artifactId>\n",
-    "    <version>19.2.0.1</version>\n",
-    "</dependency>  \n",
-    "<dependency>\n",
-    "    <groupId>org.graalvm.js</groupId>\n",
-    "    <artifactId>js-scriptengine</artifactId>\n",
-    "    <version>19.2.0.1</version>\n",
-    "</dependency>"
+    "%maven org.graalvm.js:js:19.2.0.1\n",
+    "%maven org.graalvm.js:js-scriptengine:19.2.0.1\n",
+    "\n",
+    "import org.graalvm.polyglot.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -154,8 +147,6 @@
     }
    ],
    "source": [
-    "import org.graalvm.polyglot.*;\n",
-    "\n",
     "try (Context context = Context.create(\"js\")) {\n",
     "\n",
     "    var value = context.eval(\"js\", \"3 + 4 * 10\");\n",
@@ -170,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +218,22 @@
     "    System.err.println(e);\n",
     "    System.out.println(\"이걸 적당히 잘 처리하면 유용하게 활용 가능\");\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// ... class Calculator implements ICalculator ..."
    ]
   },
   {
