--- a/ktproj/KtCalc.ipynb
+++ b/ktproj/KtCalc.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c85bcfa-1714-493a-ba8b-7837e8cac846",
+   "id": "de85b6a9",
+   "metadata": {},
+   "source": [
+    "# HW2a: Kotlin Calcuator\n",
+    "- 이름: ???\n",
+    "- 학번: ????????"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd572022",
    "metadata": {},
    "source": [
     "https://calculatorhistory.net"
@@ -11,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "51036ea1-8127-4413-9344-011c4ec64108",
+   "id": "7d0b95db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60346a47-fba4-48bf-8673-0cbc010783ee",
+   "id": "0adebb76",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "16febcf6-03c7-4c04-b181-f1826fbbd2d2",
+   "id": "7ae9bcb4",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "07c02b2f-6a8a-46f8-81ac-a0c51c41d654",
+   "id": "873f8afd",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1eaacfac",
+   "id": "d83cf17b",
    "metadata": {
     "tags": []
    },
@@ -113,20 +123,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "dd7631ee",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "// ... class Calculator: ICalculator ..."
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "e7722de9-ac74-4ef5-8fc3-ffbde52c68c1",
+   "id": "84d4e427",
    "metadata": {},
    "source": [
     "----\n",
@@ -135,18 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "388e9bd7-052d-4841-b7ed-06e2a66b86ef",
+   "execution_count": 6,
+   "id": "f0653c9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@file:DependsOn(\"org.graalvm.js:js:22.0.0.2\")"
+    "@file:DependsOn(\"org.graalvm.js:js:22.0.0.2\")\n",
+    "@file:DependsOn(\"org.graalvm.js:js-scriptengine:22.0.0.2\")\n",
+    "import org.graalvm.polyglot.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d093be8d-6e70-45a7-bf85-d1ab032c88d1",
+   "execution_count": 7,
+   "id": "967ff7e8",
    "metadata": {},
    "outputs": [
     {
@@ -160,8 +160,6 @@
     }
    ],
    "source": [
-    "import org.graalvm.polyglot.*\n",
-    "\n",
     "val context = Context.create(\"js\"); // 그냥 항상 성공한다고 가정하면 이렇게 써도 ...\n",
     "\n",
     "val value = context.eval(\"js\", \"3 + 4 * 10\");\n",
@@ -172,8 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6220142a",
+   "execution_count": 8,
+   "id": "e125599a",
    "metadata": {},
    "outputs": [
     {
@@ -189,8 +187,6 @@
     }
    ],
    "source": [
-    "import org.graalvm.polyglot.*\n",
-    "\n",
     "val context = Context.create(\"js\"); // 그냥 항상 성공한다고 가정하면 이렇게 써도 ...\n",
     "\n",
     "try {\n",
@@ -205,9 +201,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "208a3d55-8dfc-4db1-a5b2-fffd0c90764f",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "844a118b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "// ... class Calculator: ICalculator ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45bc6c0e-45c8-47fc-b99b-6cf0494b1a66",
+   "id": "eaf11222",
    "metadata": {},
    "outputs": [],
    "source": []
