update after lab session

--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -25,7 +25,22 @@
     "sealed interface Entry { // entries for arithmetic expressions\n",
     "    enum BinOp implements Entry { ADD, MULT } // +, *\n",
     "    enum Delim implements Entry { LPAREN, RPAREN } // (, )\n",
-    "    record Value(int number) implements Entry { } // integer value\n",
+    "    record Value(int number) implements Entry { }\n",
+    "\n",
+    "    /////////////////////////////////////////\n",
+    "    // 아래는 실습 이후에 추가된 메소드 \n",
+    "    /////////////////////////////////////////\n",
+    "    \n",
+    "    static String asString(Entry e) {\n",
+    "        Objects.requireNonNull(e);\n",
+    "        return switch ( e.toString() ) {\n",
+    "                case \"ADD\" -> \"+\";\n",
+    "                case \"MULT\" -> \"*\";\n",
+    "                case \"LPAREN\" -> \"(\";\n",
+    "                case \"RPAREN\" -> \")\";\n",
+    "                default -> \"\"+((Value)e).number();\n",
+    "        };\n",
+    "    }\n",
     "}"
    ]
   },
@@ -93,21 +108,115 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "+"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Entry.asString( Entry.BinOp.ADD )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Entry.asString( new Entry.Value(43) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Value[number=43], MULT, LPAREN, Value[number=56], ADD, Value[number=43], RPAREN]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "43 * ( 56 + 43 )"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import java.util.stream.*;\n",
+    "\n",
+    "var v1 = new Entry.Value(43);\n",
+    "var v2 = new Entry.Value(56);\n",
+    "var es = List.of(v1, Entry.BinOp.MULT, Entry.Delim.LPAREN, v2, Entry.BinOp.ADD, v1, Entry.Delim.RPAREN );\n",
+    "\n",
+    "System.out.println(es);\n",
+    "\n",
+    "es.stream().map(Entry::asString).collect(Collectors.joining(\" \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "record Pair<A,B>(A first, B second) { } // because Java standard library does not provide pair data type\n",
     "\n",
     "interface ICalculator {\n",
-    "    boolean appendEntry(Entry e); // adds an entriy (either BinOp, Delim, or Vaule) at the end\n",
-    "        // appends legal entry input and return true (returns false for illegal input without adding it)\n",
-    "    boolean removeEntry(); // removes the last added entry; ◄(x or DEL) button\n",
-    "        // removes the last input entry and returns true (returns false if not possible)\n",
-    "    Entry.Value currValue(); // currently calculated value from the current entries (defaults to null)\n",
-    "    Entry.Value lastValue(); // last calculated value (defaults to 0)\n",
-    "    List<Entry> entries();  // get current entries\n",
-    "    List< Pair<List<Entry>, Entry.Value> > history();  // history of calculations\n",
-    "    void clearEntries(); // clear the current entries; AC button\n",
-    "    void clearHistory(); // clear history\n",
+    "    // Adds an entriy (either BinOp, Delim, or Vaule) at the end.\n",
+    "    // Appends legal entry input and return true (returns false for illegal input without adding it).\n",
+    "    boolean appendEntry(Entry e);\n",
+    "    \n",
+    "    // Removes the last added entry; The ◄(x or DEL) button\n",
+    "    // Removes the last input entry and returns true (returns false if not possible)\n",
+    "    boolean removeEntry();\n",
+    "    \n",
+    "    Entry.Value currValue(); // Currently calculated value from the current entries (defaults to null).\n",
+    "    Entry.Value lastValue(); // Last calculated value (defaults to 0).\n",
+    "    \n",
+    "    List<Entry> entries();  // Get current entries.\n",
+    "    List< Pair<List<Entry>, Entry.Value> > history();  // History of calculations.\n",
+    "    \n",
+    "    void clearEntries(); // Clear the current entries; AC button.\n",
+    "    void clearHistory(); // Clear history.\n",
+    "    \n",
+    "    /////////////////////////////////////////\n",
+    "    // 아래는 실습 이후에 추가된 메소드 \n",
+    "    /////////////////////////////////////////\n",
+    "    \n",
+    "    // The = button.\n",
+    "    // Adds the current entries and its calculated current value as a pair into history,\n",
+    "    // when the current entries form a valid expression to calculate the current vaule,\n",
+    "    // and clears the current entries.\n",
+    "    // Returns true for adding valid form of entries and its result value.\n",
+    "    // Returns false, without adding to the history,\n",
+    "    // when the current entries do not form a valid expression.\n",
+    "    boolean addHistory();\n",
     "}"
    ]
   },
@@ -121,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +281,16 @@
       "true\n",
       "class org.graalvm.polyglot.Value\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -180,12 +299,15 @@
     "var value = context.eval(\"js\", \"3 + 4 * 10\");\n",
     "System.out.println( value );\n",
     "System.out.println( value.toString().equals(\"43\") );\n",
-    "System.out.println( value.getClass() );"
+    "System.out.println( value.getClass() );\n",
+    "\n",
+    "int vi = value.asInt();\n",
+    "vi == 43"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
