--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -13,7 +13,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://calculatorhistory.net"
+    "https://calculatorhistory.net\n",
+    "\n",
+    "### Define your `Calculator` class by overriding abstract methods of the `ICalculator` interface (15점)\n",
+    "\n",
+    "`ICalculator` 인터페이스의 주석에 지시된 내용과 수업시간에 설명한 내용을 바탕으로 해당 인터페이스를 구현하는 `Calculator`를 작성하고 적절히 테스트하라.\n",
+    "\n",
+    "`appendEntry` 메소드의 주석에 \"legal entry\"라는 표현이 등장하는데, Java 버전에서는 이 내용은 사실상 거의 무시해도 좋다. 이것은 Kotlin 버전에서만 구현하는 것으로 한다.\n",
+    "보통 계산기 응용프로그램들은 올바른 식(valid expression)으로서 구성될 가망이 없는 버튼을 누르면 해당 입력을 거부되거나, 혹은 사용자에게 친절을 베풀어 자동으로 사용자가 입력하지 않은 내용까지 자동으로 추가하여 올바른 식을 구성할 수 있는 형태로만 입력이 진행된다.\n",
+    "하지만, 이번 Java 버전에서는 올바른 식으로 구성될 가망이 없는 Entry들도 `appendEntry` 메소드를 통해 입력이 항상 가능하도록 구현하라.\n",
+    "그러니까 `appendEntry` 메소드는 항상 true를 리턴하게 된다는 말이다.\n",
+    "\n",
+    "Calculator의 기능을 구현하기 위해서 적절한 인스턴스 변수들도 선언되어야 할 것이다.\n",
+    "\n",
+    "인스턴스 변수의 정보의 내용을 노출하는 메소드들은 캡슐화를 고려하여 작성하라.\n",
+    "\n",
+    "### Override `Calculator::toString` (10점)\n",
+    "\n",
+    "테스트 출력을 위해서는 적절히 보기좋게 계산기의 상태를 출력할 필요가 있다. 따라서 주어진 ICalculator 인터페이스의 추상 메소드를 오버라이딩하는 것 외에도 출력을 위한 `toString`도 적절히 오버라이드하라.\n",
+    "\n",
+    "예컨대, `1 + 1`을 계산한 다음 `2 * 3`을 계산하고 나서 지금은 미완성인 식 `(`를 입력중인 상황이라면\n",
+    "Calculator 객체가 **정확히** 다음과 같이 출력되어야 한다.\n",
+    "들여쓰기에 해당하는 왼쪽의 빈칸들은 space가 아닌 tab으로 처리하라.\n",
+    "\n",
+    "```\n",
+    "Calculator[\n",
+    "\tentries=\"(\",\n",
+    "\tcurrVal=null,\n",
+    "\tlastVal=6,\n",
+    "\thistory=[\n",
+    "\t\t2 * 3 = 6,\n",
+    "\t\t1 + 1 = 2\n",
+    "\t]\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "Calculator의 기능을 완전히 완성하지 않더라도 이것만으로 부분점수가 부여될 수 있다.\n",
+    "예를 들면 `new Calculator();`만 실행한 상태에서 history나 entries등을 빈 리스트 등의 정상적인 기본값이 아닌\n",
+    "테스트를 위해 임의로 초기화시켜 놓고 `toString`이 작동한다는 것을 시연하는 테스트가 있으면 부분점수 획득이 가능하다.\n",
+    "당연히 `toString`에 위 내용을 문자열로 하드코딩하면 당연히 인정이 안되고, 인스턴스 변수에 있는 데이터로부터 처리하여 문자열을 만들 내야 부분점수로 인정될 요건이 된다.\n",
+    "\n",
+    "자신이 작성한 프로그램이 잘 동작하는지 알아보기 위해서는 테스트를 실행했을 때 적절한 데이터가 출력되는지 알아보아야 하는 기능이 필수적이다.\n",
+    "그러니까 작성하기 쉬운 간단한 메소드들은 먼저 작성해 놓더라도 조금 복잡하다고 생각되는 것을 작성하여 모든 내용을 완성하기 전에 일단 `toString`부터 작성할 것을 권장한다.\n",
+    "\n",
+    "----"
    ]
   },
   {
@@ -190,6 +233,8 @@
     "interface ICalculator {\n",
     "    // Adds an entriy (either BinOp, Delim, or Vaule) at the end.\n",
     "    // Appends legal entry input and return true (returns false for illegal input without adding it).\n",
+    "    // The parameter `e` is required to be non-null.\n",
+    "    // Further details are discussed in the homework assignment instruction above.\n",
     "    boolean appendEntry(Entry e);\n",
     "    \n",
     "    // Removes the last added entry; The ◄(x or DEL) button\n",
@@ -351,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
