--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -257,11 +257,10 @@
     "    // The = button.\n",
     "    // Adds the current entries and its calculated current value as a pair into history,\n",
     "    // when the current entries form a valid expression to calculate the current vaule,\n",
-    "    // and clears the current entries.\n",
-    "    // Returns true for adding valid form of entries and its result value.\n",
-    "    // Returns false, without adding to the history,\n",
-    "    // when the current entries do not form a valid expression.\n",
-    "    boolean addHistory();\n",
+    "    // and clears the current entries and resets the current value.\n",
+    "    // Returns the calculated result value for adding valid form of entries and its result value.\n",
+    "    // Returns null, without adding to the history, when the current entries do not form a valid expression.\n",
+    "    Entry.Value calculate();\n",
     "}"
    ]
   },
