--- a/ktproj/KtCalc.ipynb
+++ b/ktproj/KtCalc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "de85b6a9",
+   "id": "f44a2cfd",
    "metadata": {},
    "source": [
     "# HW2a: Kotlin Calcuator\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd572022",
+   "id": "bb9c934d",
    "metadata": {},
    "source": [
     "https://calculatorhistory.net"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7d0b95db",
+   "id": "b2f41e7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0adebb76",
+   "id": "fd355e56",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7ae9bcb4",
+   "id": "db2d5163",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "873f8afd",
+   "id": "40b05b46",
    "metadata": {},
    "outputs": [
     {
@@ -98,33 +98,137 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d83cf17b",
+   "id": "6815345c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fun asString(e: Entry) = when (e) {\n",
+    "    Entry.BinOp.ADD    -> \"+\"\n",
+    "    Entry.BinOp.MULT   -> \"*\"\n",
+    "    Entry.Delim.LPAREN -> \"(\"\n",
+    "    Entry.Delim.RPAREN -> \")\"\n",
+    "    is Entry.Value -> e.number.toString()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ae96963a-9ab8-49a5-b9d8-75085b32de61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "+"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asString( Entry.BinOp.ADD )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "79c98336-9560-452e-b719-46e86e608bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asString( Entry.Value(43) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "788598df-657f-4272-88f1-a5668bcffd88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Value(number=43), MULT, LPAREN, Value(number=56), ADD, Value(number=43), RPAREN]\n",
+      "[43, *, (, 56, +, 43, )]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "43 * ( 56 + 43 )"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val v1 = Entry.Value(43);\n",
+    "val v2 = Entry.Value(56);\n",
+    "val es = listOf(v1, Entry.BinOp.MULT, Entry.Delim.LPAREN, v2, Entry.BinOp.ADD, v1, Entry.Delim.RPAREN );\n",
+    "\n",
+    "println(es)\n",
+    "\n",
+    "println( es.map(::asString) )\n",
+    "\n",
+    "es.map(::asString).reduce { x, y -> x + \" \" + y }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cf2a4e34",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "interface ICalculator {\n",
-    "    fun appendEntry(e: Entry): Boolean // adds an entriy (either BinOp, Delim, or Vaule) at the end\n",
-    "        // appends legal entry input and return true (returns false for illegal input without adding it)\n",
-    "    fun removeEntry(): Boolean  // removes the last added entry; ◄(x or DEL) button\n",
-    "        // removes the last input entry and returns true (returns false if not possible)\n",
-    "    fun calculate(): Entry.Value?    // push the = button\n",
-    "        // calculate current entry and returns the result value (return null when it fails) \n",
-    "        // add to history\n",
-    "        // clear current entries and nullify last calculated value\n",
+    "    // Adds an entriy (either BinOp, Delim, or Vaule) at the end.\n",
+    "    // Appends legal entry input and return true (returns false for illegal input without adding it).\n",
+    "    // Further details are discussed in the homework assignment instruction above.\n",
+    "    fun appendEntry(e: Entry): Boolean\n",
+    "\n",
+    "    // Removes the last added entry; The ◄(x or DEL) button\n",
+    "    // Removes the last input entry and returns true (returns false if not possible)\n",
+    "    fun removeEntry(): Boolean\n",
+    "    \n",
     "    fun currValue(): Entry.Value? // currently calculated value from the current entries (defaults to null)\n",
     "    fun lastValue(): Entry.Value  // last calculated value (defaults to 0)\n",
     "    fun entries(): List<Entry> // get current entries\n",
     "    fun history(): List< Pair<List<Entry>, Entry.Value> > // history of calculations\n",
     "    fun clearEntries() // clear the current entries; AC button\n",
     "    fun clearHistory() // clear history\n",
+    "\n",
+    "    // The = button.\n",
+    "    // Adds the current entries and its calculated current value as a pair into history,\n",
+    "    // when the current entries form a valid expression to calculate the current vaule,\n",
+    "    // and clears the current entries and resets the current value.\n",
+    "    // Returns the calculated result value for adding valid form of entries and its result value.\n",
+    "    // Returns null, without adding to the history, when the current entries do not form a valid expression.\n",
+    "    fun calculate(): Entry.Value?\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "84d4e427",
+   "id": "db4c51fe",
    "metadata": {},
    "source": [
     "----\n",
@@ -133,8 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f0653c9e",
+   "execution_count": 10,
+   "id": "51aeaa54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "967ff7e8",
+   "execution_count": 11,
+   "id": "25664f14",
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +261,16 @@
       "true\n",
       "class org.graalvm.polyglot.Value\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -165,13 +279,16 @@
     "val value = context.eval(\"js\", \"3 + 4 * 10\");\n",
     "println( value );\n",
     "println( value.toString() == \"43\" )\n",
-    "println( value::class )"
+    "println( value::class )\n",
+    "\n",
+    "val vi: Int = value.asInt()\n",
+    "vi == 43"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e125599a",
+   "execution_count": 12,
+   "id": "84dbcb0f",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "208a3d55-8dfc-4db1-a5b2-fffd0c90764f",
+   "id": "6694dad4",
    "metadata": {},
    "source": [
     "----"
@@ -210,8 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "844a118b",
+   "execution_count": 13,
+   "id": "310ad7ad",
    "metadata": {
     "tags": []
    },
@@ -223,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf11222",
+   "id": "321e70bd",
    "metadata": {},
    "outputs": [],
    "source": []
