--- a/jvproj/JvCalc.ipynb
+++ b/jvproj/JvCalc.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HW2a: Java Calcuator\n",
+    "# HW2a: Java Calculator\n",
     "- 이름: ???\n",
     "- 학번: ????????"
    ]
